QR-14 Location 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.taetae98.qrreader">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:requestLegacyExternalStorage="true"
         android:name=".application.HiltApplication"
