--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         navigation_version = "2.3.5"
         hilt_version = "2.38.1"
         qr_version = "4.2.0"
+        room_version = "2.3.0"
     }
     repositories {
         google()
