--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.KangTaeJong98.Library:library:1.0.0'
+    implementation 'com.github.KangTaeJong98:Library:5.1.2'
 
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
